--- a/FoodTracker/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/FoodTracker/Base.lproj/Main.storyboard
@@ -77,6 +77,147 @@
             </objects>
             <point key="canvasLocation" x="140" y="137.18140929535232"/>
         </scene>
+        <!--New Meal-->
+        <scene sceneID="yYG-bo-fhp">
+            <objects>
+                <viewController id="7g4-ih-B1L" customClass="MealViewController" customModule="FoodTracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9ZO-bu-pAp"/>
+                        <viewControllerLayoutGuide type="bottom" id="1rN-Tg-ww5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lv3-XJ-yHB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="dcu-ys-CUN">
+                                <rect key="frame" x="16" y="108" width="343" height="416"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter meal name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Xn-Cu-3WS">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                                    </textField>
+                                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="320" placeholderIntrinsicHeight="320" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="HTA-AW-IQT">
+                                        <rect key="frame" x="11.666666666666657" y="38" width="320" height="320"/>
+                                        <gestureRecognizers/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="HTA-AW-IQT" secondAttribute="height" multiplier="1:1" id="X5f-ND-H3q"/>
+                                        </constraints>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="hbz-Cf-OwS" appends="YES" id="hBm-X6-Pk7"/>
+                                        </connections>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="gKP-JD-Uym" customClass="RatingControl" customModule="FoodTracker" customModuleProvider="target">
+                                        <rect key="frame" x="45.666666666666657" y="366" width="251.99999999999997" height="50"/>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="4Xn-Cu-3WS" secondAttribute="trailing" id="QCC-eb-sE7"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="dcu-ys-CUN" firstAttribute="leading" secondItem="lv3-XJ-yHB" secondAttribute="leadingMargin" id="aa4-by-0tc"/>
+                            <constraint firstItem="dcu-ys-CUN" firstAttribute="top" secondItem="9ZO-bu-pAp" secondAttribute="bottom" constant="20" id="c1P-nq-erx"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dcu-ys-CUN" secondAttribute="trailing" id="lQb-we-xuQ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="New Meal" id="41s-1a-VDN">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="T1o-50-1XJ">
+                            <connections>
+                                <action selector="cancel:" destination="7g4-ih-B1L" id="w7T-8d-sfF"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="N9U-Da-Hx1"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="nameTextField" destination="4Xn-Cu-3WS" id="p9x-35-g3a"/>
+                        <outlet property="photoImageView" destination="HTA-AW-IQT" id="DP0-PO-NNH"/>
+                        <outlet property="ratingControl" destination="gKP-JD-Uym" id="gKG-xi-uqF"/>
+                        <outlet property="saveButton" destination="N9U-Da-Hx1" id="FVU-Zm-Tff"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DHU-hx-UWX" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="hbz-Cf-OwS">
+                    <connections>
+                        <action selector="selectImageFromPhotoLibrary:" destination="7g4-ih-B1L" id="yvx-RQ-3ZC"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="2024.8" y="136.69950738916256"/>
+        </scene>
+        <!--Your Meals-->
+        <scene sceneID="I7H-fo-BMv">
+            <objects>
+                <tableViewController id="hlN-jR-UCP" customClass="MealTableViewController" customModule="FoodTracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Ztd-tL-oDb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MealTableViewCell" rowHeight="90" id="jix-sK-etb" customClass="MealTableViewCell" customModule="FoodTracker" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="90"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jix-sK-etb" id="cSV-BQ-P2h">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="89.666666666666671"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="Ecs-ov-dRF">
+                                            <rect key="frame" x="0.0" y="0.0" width="91" height="90"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Kx-Zq-oQJ">
+                                            <rect key="frame" x="95" y="10" width="274" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="al2-GI-fUE" customClass="RatingControl" customModule="FoodTracker" customModuleProvider="target">
+                                            <rect key="frame" x="95" y="35" width="252" height="44"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </stackView>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameLabel" destination="3Kx-Zq-oQJ" id="TBj-Ge-qir"/>
+                                    <outlet property="photoImageView" destination="Ecs-ov-dRF" id="oUY-os-LI3"/>
+                                    <outlet property="ratingControl" destination="al2-GI-fUE" id="lxX-bL-gMr"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="hlN-jR-UCP" id="PCd-cp-dEK"/>
+                            <outlet property="delegate" destination="hlN-jR-UCP" id="Zhs-0D-tMU"/>
+                        </connections>
+                    </tableView>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Your Meals" id="m5n-Xk-4qV">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="OsN-2g-zxM"/>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dng-oN-0RI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="879" y="137"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Tic-0Q-ZzR">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="S38-9s-rQf" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Szy-at-9dU">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2qq-Mj-xf7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-660" y="136.69950738916256"/>
+        </scene>
     </scenes>
     <resources>
         <image name="defaultPhoto" width="712" height="403"/>
